--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,13 +8,13 @@ AllCops:
 Layout/LineLength:
   Max: 200
 Metrics/MethodLength:
-  Max: 20
+  Max: 40
 Metrics/AbcSize:
   Max: 50
 Metrics/ModuleLength:
   Max: 150
 Metrics/ClassLength:
-  Max: 150
+  Max: 160
 Metrics/BlockLength:
   ExcludedMethods: ["describe"]
   Max: 30
@@ -26,6 +26,8 @@ Style/ClassAndModuleChildren:
 Style/EachForSimpleLoop:
   Enabled: false
 Style/AndOr:
+  Enabled: false
+Style/GuardClause:
   Enabled: false
 Style/DefWithParentheses:
   Enabled: false
