--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -54,6 +54,8 @@ Lint/ScriptPermission:
   Enabled: false
 Style/HashEachMethods:
   Enabled: false
+Style/IfInsideElse:
+  Enabled: false
 Style/HashTransformKeys:
   Enabled: false
 Style/HashTransformValues:
